# BareTerm

./: .gitignore  cfs_workspace_blinky1.code-workspace
.cfs/: .cfsworkspace  bareterm_main_screen.c  bareterm_main_screen.h  bareterm_screen.h  bareterm_screen_manager.c  bareterm_screen_manager.h  max32657-wlp.cfsconfig  settings_screen.c
m33/: CMakeLists.txt  prj.conf
m33/bareterm/: CMakeLists.txt  bareterm.c  bareterm.h  bareterm_backend.h  bareterm_backend_stdio.c  bareterm_input.c  bareterm_input.h  bareterm_label.c  bareterm_modalpopup.c  bareterm_radiogroup.c  bareterm_screen.h  bareterm_screen_manager.c  bareterm_textbox.c  bareterm_textinput.c  bareterm_uart_input.c  bareterm_uart_input.h  bareterm_widget.h
m33/bareterm/widget/: bareterm_checkbox.c  bareterm_listbox.c  bareterm_modalpopup.c  bareterm_progressbar.c  bareterm_statusindicator.c  bareterm_widget.c  bareterm_widget.h
m33/boards/: max32657evkit_max32657.conf  max32657evkit_max32657.overlay
m33/include/comui/: tui_widget.h
m33/src/: main.c  main_screen.c  main_screen.h  settings_screen.c  settings_screen.h  test_screen.c  test_screen.h  test_unit.c  test_unit.h  tui.c  tui.h  tui_backend.h  tui_backend_stdio.c  tui_checkbox.c  tui_color.h  tui_event.h  tui_event_loop.c  tui_event_queue.h  tui_input.c  tui_input.h  tui_label.c  tui_modalpopup.c  tui_progressbar.c  tui_radiogroup.c  tui_textbox.c  tui_textinput.c  tui_uart_input.c  tui_uart_input.h  tui_widget.c  tui_widget.h
